Fixed layout issue on large monitor displays in the contact section.

--- a/styles/_large-monitors.scss
+++ b/styles/_large-monitors.scss
@@ -616,7 +616,7 @@
     
     
     #contact.contact {
-        background-color: #eaeaea;
+        background-color: $font-color1;
         align-self: center;
         padding: 5em 0em 0em 0em;
 
@@ -644,9 +644,7 @@
                 width: 50%;
                 text-align: left;
                 background-color: $hdr-ftr-bg;
-                padding: 8em 0em;
-                padding-right: 20%;
-                padding-left: 4em;
+                padding: 8em 10% 5em 4em;
 
                 h3:first-of-type {
                     display: none;
@@ -798,7 +796,7 @@
 
             .contact-form {
                 width: 50%;
-                padding: 8em 4em 5em 20%;
+                padding: 8em 4em 5em 10%;
                 background-color: $hdr-ftr-bg;
                 color: $font-color1;
                 
@@ -854,7 +852,7 @@
         overflow: hidden;
         height: 2em;
         transition: height 0.3s ease;
-        padding: 0em 20%;
+        padding: 0em 10%;
         background-color: $hdr-ftr-bg;
     
         .icon {
@@ -870,6 +868,7 @@
                 padding: 0.3em 0em;
                 transform: rotate(0deg);
                 transition: transform 0.3s ease;
+            
             }
 
             &:hover {
@@ -894,7 +893,7 @@
             color: $font-color1;
         }
     }
-    
+
     
     /* End of Contact Section */
     
