--- a/styles/style.css
+++ b/styles/style.css
@@ -3813,7 +3813,7 @@ h4 {
     width: 90%;
   }
   #contact.contact {
-    background-color: #eaeaea;
+    background-color: #efefef;
     align-self: center;
     padding: 5em 0em 0em 0em;
   }
@@ -3839,9 +3839,7 @@ h4 {
     width: 50%;
     text-align: left;
     background-color: #16181a;
-    padding: 8em 0em;
-    padding-right: 20%;
-    padding-left: 4em;
+    padding: 8em 10% 5em 4em;
   }
   #contact.contact .contact-container .contact-me h3:first-of-type {
     display: none;
@@ -4013,7 +4011,7 @@ h4 {
   }
   #contact.contact .contact-container .contact-form {
     width: 50%;
-    padding: 8em 4em 5em 20%;
+    padding: 8em 4em 5em 10%;
     background-color: #16181a;
     color: #efefef;
   }
@@ -4060,7 +4058,7 @@ h4 {
     overflow: hidden;
     height: 2em;
     transition: height 0.3s ease;
-    padding: 0em 20%;
+    padding: 0em 10%;
     background-color: #16181a;
   }
   .dev-process .icon {
